--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
             <h2 class="text-4xl font-bold text-center mb-12 section-title">Schedule Your Lawn Care Appointment</h2>
             <p class="text-center text-lg text-gray-700 mb-8">Click below to easily book your mowing or edging service through Calendly.</p>
             <div class="max-w-3xl mx-auto bg-white p-4 rounded-xl shadow-lg flex justify-center items-center">
-                <!-- Calendly inline widget begin -->
-                <div class="calendly-inline-widget" data-url="https://calendly.com/pantojaefrain1127/lawn-moving-appoinment" style="min-width:320px;height:700px;"></div>
-                <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-                <!-- Calendly inline widget end -->
+               <!-- Calendly inline widget begin -->
+<div class="calendly-inline-widget" data-url="https://calendly.com/pantojaefrain1127/lawn-moving-appoinment?hide_gdpr_banner=1" style="min-width:320px;height:700px;"></div>
+<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+<!-- Calendly inline widget end -->
             </div>
         </div>
     </section>
