--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <p class="text-center text-lg text-gray-700 mb-8">Click below to easily book your mowing or edging service through Calendly.</p>
             <div class="max-w-3xl mx-auto bg-white p-4 rounded-xl shadow-lg flex justify-center items-center">
                <!-- Calendly inline widget begin -->
-<div class="calendly-inline-widget" data-url="https://calendly.com/pantojaefrain1127/lawn-moving-appoinment?hide_gdpr_banner=1" style="min-width:320px;height:700px;"></div>
+<div class="calendly-inline-widget" data-url="https://calendly.com/pantojaefrain1127/lawn-moving-appoinment?hide_event_type_details=1&gdpr_banner=1" style="min-width:320px;height:700px;"></div>
 <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 <!-- Calendly inline widget end -->
             </div>
