--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <!-- Header -->
     <header class="bg-white shadow-sm py-3"> <!-- Reduced py-4 to py-3 for smaller header -->
         <div class="container mx-auto flex justify-between items-center px-4">
-            <a href="#" class="text-3xl font-bold text-green-700">Rainao Lawn Moving</a>
+            <a href="#" class="text-3xl font-bold text-green-700">Rainao Lawn Mowing</a>
 
             <!-- Hamburger menu button for mobile -->
             <button id="mobile-menu-button" class="mobile-menu-button md:hidden">
@@ -149,7 +149,7 @@
     <section id="home" class="hero-background h-screen flex items-center justify-center text-center text-white relative">
         <div class="absolute inset-0 bg-black opacity-50"></div>
         <div class="relative z-10 p-6 rounded-xl">
-            <h1 class="text-5xl md:text-6xl font-extrabold leading-tight mb-4 drop-shadow-lg">Rainao Lawn Moving: Your Lawn, Our Passion</h1>
+            <h1 class="text-5xl md:text-6xl font-extrabold leading-tight mb-4 drop-shadow-lg">Rainao Lawn Mowing: Your Lawn, Our Passion</h1>
             <p class="text-xl md:text-2xl mb-8 drop-shadow-md">We keep your lawn at its best, at an affordable price.</p>
             <a href="#appointment" class="btn-primary text-lg inline-block">Schedule Your Service Today</a>
         </div>
@@ -185,13 +185,13 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Testimonial Card 1 -->
                 <div class="card text-center">
-                    <p class="text-lg italic text-gray-700 mb-4">"EJ and the Rainao Lawn Moving team transformed my patchy lawn into a lush green paradise! Their service in East Orlando is top-notch."</p>
+                    <p class="text-lg italic text-gray-700 mb-4">"EJ and the Rainao Lawn Mowing team transformed my patchy lawn into a lush green paradise! Their service in East Orlando is top-notch."</p>
                     <p class="font-semibold text-green-700">- Jane Doe, East Orlando</p>
                     <p class="text-sm text-gray-500">Happy Customer</p>
                 </div>
                 <!-- Testimonial Card 2 -->
                 <div class="card text-center">
-                    <p class="text-lg italic text-gray-700 mb-4">"Absolutely fantastic service! My lawn has never looked better. Highly recommend Rainao Lawn Moving for all your East Orlando lawn care needs."</p>
+                    <p class="text-lg italic text-gray-700 mb-4">"Absolutely fantastic service! My lawn has never looked better. Highly recommend Rainao Lawn Mowing for all your East Orlando lawn care needs."</p>
                     <p class="font-semibold text-green-700">- John Smith, East Orlando</p>
                     <p class="text-sm text-gray-500">Satisfied Client</p>
                 </div>
@@ -222,7 +222,7 @@
     <!-- Contact Section -->
     <section id="contact" class="py-16 bg-white">
         <div class="container mx-auto px-4">
-            <h2 class="text-4xl font-bold text-center mb-12 section-title">Get in Touch with Rainao Lawn Moving</h2>
+            <h2 class="text-4xl font-bold text-center mb-12 section-title">Get in Touch with Rainao Lawn Mowing</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-4xl mx-auto">
                 <div class="card">
                     <h3 class="text-2xl font-semibold text-green-700 mb-4">Contact Information</h3>
@@ -257,7 +257,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto text-center px-4">
-            <p>&copy; 2025 Rainao Lawn Moving, EJ Pantoja. All rights reserved.</p>
+            <p>&copy; 2025 Rainao Lawn Mowing, EJ Pantoja. All rights reserved.</p>
             <p class="mt-2 text-sm">Serving East Orlando with passion.</p>
         </div>
     </footer>
